A lot of work on the back end part (sorry, no details)

--- a/BBTDWeb/BBTD.Mvc/appsettings.json
+++ b/BBTDWeb/BBTD.Mvc/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "BbtddbConnStr": "server=.;Database=BBTDDB;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
+  },
+  "Barcode": {
+    // Id of the type (Aztec=1, Data Matrix=32, PDF417=1024, QR Code=2048)
+    "TypeId": 1024,
+    "Size": 400
   }
 }
