--- a/BBTDWeb/BBTD.Mvc/Properties/launchSettings.json
+++ b/BBTDWeb/BBTD.Mvc/Properties/launchSettings.json
@@ -12,7 +12,8 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:5111",
+      "applicationUrl": "http://0.0.0.0:5111",
+      "launchUrl": "http://localhost:5111",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -21,7 +22,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:5443;http://localhost:5111",
+      "applicationUrl": "https://0.0.0.0:5443;http://0.0.0.0:5111",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
