--- a/BBTDWeb/BBTD.Mvc/appsettings.json
+++ b/BBTDWeb/BBTD.Mvc/appsettings.json
@@ -5,7 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
   "ConnectionStrings": {
     "BbtddbConnStr": "server=.;Database=BBTDDB;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
   },
@@ -13,5 +12,29 @@
     // Id of the type (Aztec=1, Data Matrix=32, PDF417=1024, QR Code=2048)
     "TypeId": 1024,
     "Size": 400
-  }
+  },
+  "Serilog": {
+    "Using": [
+      "Serilog.Sinks.Graylog"
+    ],
+    "MinimumLevel": "Information",
+    //"WriteTo": [
+    //  { "Name": "Console" }
+    //],
+    "WriteTo": [
+      {
+        "Name": "Graylog",
+        "Args": {
+          "hostnameOrAddress": "127.0.0.1",
+          "port": "12201",
+          "transportType": "Udp"
+        }
+      }
+    ],
+    //"Application": "BBTD"
+    "Properties": {
+      "Application": "BBTD"
+    }
+  },
+  "AllowedHosts": "*"
 }
