--- a/BBTDWeb/BBTD.Mvc/BBTD.Mvc.csproj
+++ b/BBTDWeb/BBTD.Mvc/BBTD.Mvc.csproj
@@ -21,6 +21,11 @@
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.9" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.8" />
+    <PackageReference Include="serilog" Version="3.0.1" />
+    <PackageReference Include="serilog.aspnetcore" Version="7.0.0" />
+    <PackageReference Include="serilog.Extensions.Hosting" Version="7.0.0" />
+    <PackageReference Include="serilog.Sinks.Console" Version="4.1.0" />
+    <PackageReference Include="serilog.Sinks.Graylog" Version="3.0.2" />
     <PackageReference Include="Zxing.Net" Version="0.16.9" />
     <PackageReference Include="ZXing.Net.Bindings.Windows.Compatibility" Version="0.16.12" />
   </ItemGroup>
