--- a/BBTDWeb/BBTD.Mvc/appsettings.json
+++ b/BBTDWeb/BBTD.Mvc/appsettings.json
@@ -1,9 +1,95 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Default": "Information"
     }
+  },
+  //"Serilog": {
+  //  "Using": [
+  //    "Serilog.Sinks.Graylog"
+  //  ],
+  //  "MinimumLevel": "Debug",
+  //  //"Filter": [
+  //  //  {
+  //  //    "Name": "ByExcluding",
+  //  //    "Args": {
+  //  //      "expression": "StartsWith(SourceContext, 'Microsoft.')"
+  //  //    }
+  //  //  }
+  //  //],
+  //  "WriteTo": [
+  //    {
+  //      "Name": "Console"
+  //    },
+  //    {
+  //      "Name": "Graylog",
+  //      "Args": {
+  //        "version": "1.1",
+  //        "hostnameOrAddress": "127.0.0.1",
+  //        "port": "12201",
+  //        "transportType": "Udp"
+  //      }
+  //    }
+  //  ],
+  //  //"Application": "BBTD"
+  //  //"Properties": {
+  //  //  "Application": "BBTDWeb"
+  //  //}
+  //},
+  "NLog": {
+    "internalLogFile": "bbtd-internal-log.txt",
+    "internalLogLevel": "Trace",
+    "targets": {
+      "jsonFile": {
+        "type": "File",
+        "fileName": "${basedir}/Logs/events.jsonlog",
+        "layout": {
+          "type": "JsonLayout",
+          "Attributes": [
+            {
+              "name": "a", // application / logger
+              "layout": "${logger:shortName=true}"
+            },
+            {
+              "name": "l",
+              "layout": "${level:upperCase=true}"
+            },
+            {
+              "name": "t",
+              "layout": "${exacttimestamp}"
+            },
+            {
+              "name": "m",
+              "layout": "${message}"
+            },
+            {
+              "name": "r",
+              "layout": "${reference}"
+            },
+            {
+              "name": "o",
+              "layout": "${operation}"
+            },
+            {
+              "name": "e",
+              "layout": "${exception:format=tostring}"
+            }
+          ]
+        }
+      }
+    },
+    "rules": [
+      {
+        "logger": "Microsoft.*",
+        "minLevel": "Error",
+        "final": "true"
+      },
+      {
+        "logger": "BBTD.*",
+        "minLevel": "Trace",
+        "writeTo": "jsonFile"
+      }
+    ]
   },
   "ConnectionStrings": {
     "BbtddbConnStr": "server=.;Database=BBTDDB;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
@@ -12,29 +98,6 @@
     // Id of the type (Aztec=1, Data Matrix=32, PDF417=1024, QR Code=2048)
     "TypeId": 1024,
     "Size": 400
-  },
-  "Serilog": {
-    "Using": [
-      "Serilog.Sinks.Graylog"
-    ],
-    "MinimumLevel": "Information",
-    //"WriteTo": [
-    //  { "Name": "Console" }
-    //],
-    "WriteTo": [
-      {
-        "Name": "Graylog",
-        "Args": {
-          "hostnameOrAddress": "127.0.0.1",
-          "port": "12201",
-          "transportType": "Udp"
-        }
-      }
-    ],
-    //"Application": "BBTD"
-    "Properties": {
-      "Application": "BBTD"
-    }
   },
   "AllowedHosts": "*"
 }
