--- a/BBTDWeb/BBTD.Mvc/appsettings.json
+++ b/BBTDWeb/BBTD.Mvc/appsettings.json
@@ -4,38 +4,6 @@
       "Default": "Information"
     }
   },
-  //"Serilog": {
-  //  "Using": [
-  //    "Serilog.Sinks.Graylog"
-  //  ],
-  //  "MinimumLevel": "Debug",
-  //  //"Filter": [
-  //  //  {
-  //  //    "Name": "ByExcluding",
-  //  //    "Args": {
-  //  //      "expression": "StartsWith(SourceContext, 'Microsoft.')"
-  //  //    }
-  //  //  }
-  //  //],
-  //  "WriteTo": [
-  //    {
-  //      "Name": "Console"
-  //    },
-  //    {
-  //      "Name": "Graylog",
-  //      "Args": {
-  //        "version": "1.1",
-  //        "hostnameOrAddress": "127.0.0.1",
-  //        "port": "12201",
-  //        "transportType": "Udp"
-  //      }
-  //    }
-  //  ],
-  //  //"Application": "BBTD"
-  //  //"Properties": {
-  //  //  "Application": "BBTDWeb"
-  //  //}
-  //},
   "NLog": {
     "internalLogFile": "bbtd-internal-log.txt",
     "internalLogLevel": "Trace",
@@ -94,10 +62,10 @@
   "ConnectionStrings": {
     "BbtddbConnStr": "server=.;Database=BBTDDB;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
   },
-  "Barcode": {
-    // Id of the type (Aztec=1, Data Matrix=32, PDF417=1024, QR Code=2048)
-    "TypeId": 1024,
-    "Size": 400
-  },
+  //"Barcode": {
+  //  // Id of the type (Aztec=1, Data Matrix=32, PDF417=1024, QR Code=2048)
+  //  "TypeId": 1024,
+  //  "Size": 400
+  //},
   "AllowedHosts": "*"
 }
