--- a/BBTDWeb/BBTD.Mvc/BBTD.Mvc.csproj
+++ b/BBTDWeb/BBTD.Mvc/BBTD.Mvc.csproj
@@ -19,7 +19,7 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="7.0.9" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="7.0.11" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.9">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -30,6 +30,7 @@
     <PackageReference Include="NLog" Version="5.2.3" />
     <PackageReference Include="NLog.Web" Version="5.3.3" />
     <PackageReference Include="NLog.Web.AspnetCore" Version="5.3.3" />
+    <PackageReference Include="ScottPlot" Version="4.1.67" />
     <PackageReference Include="serilog" Version="3.0.1" />
     <PackageReference Include="serilog.aspnetcore" Version="7.0.0" />
     <PackageReference Include="serilog.Extensions.Hosting" Version="7.0.0" />
